# watcher

./: Cargo.toml  README.md  build.rs  package.json  pnpm-lock.yaml
examples/tauri-app/: package.json  pnpm-lock.yaml
examples/tauri-app/src/: App.svelte
examples/tauri-app/src-tauri/: Cargo.toml  tauri.conf.json
examples/tauri-app/src-tauri/capabilities/: migrated.json
examples/tauri-app/src-tauri/src/: lib.rs
permissions/autogenerated/: reference.md
permissions/autogenerated/commands/: get_program_by_path.toml  get_program_list.toml  is_active.toml  resume.toml  suspend.toml
permissions/schemas/: schema.json
powershell/: get-program.ps1
src/: commands.rs  desktop.rs  error.rs  event.rs  lib.rs  mobile.rs  shared.rs  timer.rs  watcher.rs  windows.rs
src/windows/: icons.rs  mod.rs
webview-dist/: index.d.ts  index.js
webview-src/: index.ts
