[package]
name = "tauri-plugin-shion-watcher"
version = "0.0.0"
authors = [ "You" ]
description = ""
edition = "2021"
rust-version = "1.70"
exclude = ["/examples", "/webview-dist", "/webview-src", "/node_modules"]
links = "tauri-plugin-shion-watcher"

[dependencies]
tauri = { version = "2.0.0-alpha.20" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
rdev = "0.5.3"
log = "0.4.20"
anyhow = "1.0.79"
parking_lot = "0.12.1"
crossbeam-channel = "0.5.11"
lazy_static = "1.4.0"
chrono = "0.4.31"

[target."cfg(target_os = \"windows\")".dependencies]
windows = "0.52.0"

[build-dependencies]
tauri-build = { version = "2.0.0-alpha.13" }
