[package]
name = "tauri-plugin-shion-watcher"
version = "0.0.0"
authors = [ "You" ]
description = ""
edition = "2021"
rust-version = "1.70"
exclude = ["/examples", "/webview-dist", "/webview-src", "/node_modules"]
links = "tauri-plugin-shion-watcher"

[dependencies]
tauri = { version = "2.0.0-alpha.20" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
log = "^0.4"
anyhow = "1.0"
parking_lot = "^0.12"
crossbeam-channel = "^0.5"
lazy_static = "^1.4.0"
chrono = "^0.4"

[target."cfg(target_os = \"windows\")".dependencies]
windows = "0.52.0"
nodio-win32 = { git = "https://github.com/hanaTsuk1/nodio" }

[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
rdev = "0.5"

[build-dependencies]
tauri-build = { version = "2.0.0-alpha.13" }
